--- a/roadwatch/pom.xml
+++ b/roadwatch/pom.xml
@@ -69,7 +69,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>fi.tuni.roadwatch/fi.tuni.roadwatch.RoadWatch</mainClass>
+                            <mainClass>fi.tuni.roadwatch/fi.tuni.roadwatch.RoadWatchApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
